fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ body {
 
 .section-two--text {
     color: rgba(0, 0, 0, 0.5);
+    font-size: 1.1rem;
 }
 
 /* Section 3 */
@@ -176,6 +177,11 @@ body {
 
 .background2-top {
     margin-bottom: -5px;
+    margin-top: 50px;
+}
+
+.background1-bottom {
+    margin-bottom: 50px;
 }
 
 .background1-top__mobile {
@@ -194,7 +200,7 @@ body {
 }
 
 .section-three__img {
-    width: 85%;
+    width: 75%;
 }
 
 .light-background {
